@@ -80,6 +80,9 @@ Core and builtins
 Library
 -------
 
+- #1507247, #2004: tarfile.py: Use mode 0700 for temporary directories and
+  default permissions for missing directories.
+
 - #175006: The debugger used to skip the condition of a "while" statement
   after the first iteration. Now it correctly steps on the expression, and
   breakpoints on the "while" statement are honored on each loop.
